# Autopack

./: .build129_test_config.yaml  .claude-prompt  .coveragerc  .dockerignore  .editorconfig  .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  =0.1.9  ACCURACY_IMPROVEMENTS_98PERCENT.md  API_AUTH_TEST_RESULTS.md  API_KEY_FIX.md  ARCHIVE_CLEANUP_PLAN.md  AUTOMATED_RESEARCH_WORKFLOW_SUMMARY.md  AUTONOMOUS_TIDY_EXECUTION_SUMMARY.md  AUTONOMOUS_TIDY_IMPLEMENTATION_COMPLETE.md  AUTOPACK_DRAIN_SECOND_OPINION_REVIEW.md  BUG_FIX_REPORT.md  BUILD129_P7P9_VALIDATION_STATUS.md  BUILD_146_P6_BENCHMARK_REPORT.md  BUILD_HISTORY.md  BUILD_LOG.md  CAPTURE_GRID_AREA_GUIDE.txt  CHUNK_A_COMPLETE.md  CLEANUP_SUMMARY_REPORT.md  CLEANUP_V2_SUMMARY.md  CLEANUP_VERIFICATION_ISSUES.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_TIDY_EXECUTION_PLAN.md  CONFIDENCE_THRESHOLD_FIX_20251211.md  CONSOLIDATED_DEBUG.md  CONSOLIDATION_TO_DOCS_SUMMARY.md  CURSOR_HELP_EXECUTOR_API_ISSUE.md  CURSOR_PROMPT_RESEARCH_SYSTEM.md  DASHBOARD_COMPLETE.md  (+152 more)
.autonomous_runs/: AUTO_CONVERSION_GUIDE.md  NEW_PROJECT_SETUP_GUIDE.md  OPENAI_DELEGATION_GUIDE.md  QUICK_REFERENCE.md  README.md  setup_new_project.py  task_format_converter.py
.autopack/: PHASE_6_HANDOFF.md  PHASE_ABC_HANDOFF.md  PROBE_FAILURE_ANALYSIS.md  PROJECT_QUEUE.json  ROADC_TASK_QUEUE.json  TELEMETRY_COLLECTION_BLOCKER.md  TELEMETRY_DB_ROOT_CAUSE.md  WAVE1_AGENT_FAILURE_ROOT_CAUSE_ANALYSIS.md  check_legacy_telemetry.py  config.yaml  diagnose_db_issue.md  human_notes.md  (+4 more)
(+3507 files in other folders)
